--- a/config/apex-tools/default/core.entity_form_display.paragraph.socket_dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.socket_dimensions.default.yml
@@ -28,63 +28,112 @@ content:
     weight: 0
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_b_drive_end_diameter:
     type: physical_measurement_default
     weight: 1
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_c_overall_length:
     type: physical_measurement_default
     weight: 2
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_d_taper_or_shoulder_length:
     type: physical_measurement_default
     weight: 3
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_e_bolt_clearance_depth:
     type: physical_measurement_default
     weight: 4
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_f_broach_depth:
     type: physical_measurement_default
     weight: 5
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_g_nose_end_diameter:
     type: physical_measurement_default
     weight: 6
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_h_broach_opening:
     type: options_select
@@ -103,27 +152,48 @@ content:
     weight: 9
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_k_spring_force:
     type: physical_measurement_default
     weight: 10
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
   field_l_barbell_style_dims:
     type: physical_measurement_default
     weight: 11
     region: content
     settings:
-      default_unit: ''
+      default_unit: m
       allow_unit_change: true
-      available_units: {  }
+      available_units:
+        mm: mm
+        in: in
+        cm: '0'
+        m: '0'
+        km: '0'
+        ft: '0'
+        M: '0'
     third_party_settings: {  }
 hidden:
   created: true
