--- a/config/apex-tools/default/core.entity_view_display.paragraph.cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.cover_features.default.yml
@@ -18,17 +18,14 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
   field_nylon_requirements_yes_no_:
-    type: boolean
+    type: list_default
     label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
+    settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
 hidden:
   entity_print_view_epub: true
