--- a/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_f_broach_depth.yml
+++ b/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_f_broach_depth.yml
@@ -11,7 +11,7 @@ id: paragraph.socket_dimensions.field_f_broach_depth
 field_name: field_f_broach_depth
 entity_type: paragraph
 bundle: socket_dimensions
-label: 'F. Broach Depth'
+label: 'F. Broach Depth (Depth of hex)'
 description: ''
 required: false
 translatable: false
