--- a/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
@@ -41,6 +41,9 @@ settings:
     -
       value: 12_point
       label: '12 Point<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket.png''>'
+    -
+      value: broach_other
+      label: Other
   allowed_values_function: ''
 module: options
 locked: false
