--- a/config/apex-tools/default/field.storage.paragraph.field_drive_configuration.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_drive_configuration.yml
@@ -26,6 +26,9 @@ settings:
     -
       value: hex
       label: Hex
+    -
+      value: hex_other
+      label: Other
   allowed_values_function: ''
 module: options
 locked: false
