--- a/config/apex-tools/default/field.storage.paragraph.field_magnetic_field.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_magnetic_field.yml
@@ -16,7 +16,7 @@ settings:
       label: 'Magnetic Bolt Clearance (MB)'
     -
       value: magnetic_bolt_clearance_mrr
-      label: 'Magnetic Bolt Clearance (MRR)'
+      label: 'Magnetic Bolt Clearance, Ring Mag (MRR)'
     -
       value: sidewall_magnet
       label: 'Sidewall Magnet (SWM)'
