--- a/config/apex-tools/default/core.entity_form_display.paragraph.cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.cover_features.default.yml
@@ -13,16 +13,15 @@ mode: default
 content:
   field_cover_features_radio:
     type: options_buttons
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_nylon_requirements_yes_no_:
-    type: boolean_checkbox
-    weight: 1
+    type: options_buttons
+    weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
