--- a/config/apex-tools/default/field.field.paragraph.cover_features.field_nylon_requirements_yes_no_.yml
+++ b/config/apex-tools/default/field.field.paragraph.cover_features.field_nylon_requirements_yes_no_.yml
@@ -1,10 +1,12 @@
-uuid: 32d41194-4e42-472c-a4ee-d7cbb6e6e1c0
+uuid: 4401f53f-8a89-41de-8c78-69fa9ad1b590
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_nylon_requirements_yes_no_
     - paragraphs.paragraphs_type.cover_features
+  module:
+    - options
 id: paragraph.cover_features.field_nylon_requirements_yes_no_
 field_name: field_nylon_requirements_yes_no_
 entity_type: paragraph
@@ -13,11 +15,7 @@ label: 'Nylon requirements (Yes/No)'
 description: ''
 required: false
 translatable: false
-default_value:
-  -
-    value: 0
+default_value: {  }
 default_value_callback: ''
-settings:
-  on_label: 'Yes'
-  off_label: 'No'
-field_type: boolean
+settings: {  }
+field_type: list_string
