--- a/config/apex-tools/default/field.storage.paragraph.field_nylon_requirements_yes_no_.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_nylon_requirements_yes_no_.yml
@@ -1,15 +1,24 @@
-uuid: 465df2e0-b8fd-4064-b434-7783d00dd0d4
+uuid: 637c0633-d884-4678-a156-5e58616e9674
 langcode: en
 status: true
 dependencies:
   module:
+    - options
     - paragraphs
 id: paragraph.field_nylon_requirements_yes_no_
 field_name: field_nylon_requirements_yes_no_
 entity_type: paragraph
-type: boolean
-settings: {  }
-module: core
+type: list_string
+settings:
+  allowed_values:
+    -
+      value: nylon_yes
+      label: 'Yes'
+    -
+      value: nylon_no
+      label: 'No'
+  allowed_values_function: ''
+module: options
 locked: false
 cardinality: 1
 translatable: true
