--- a/config/apex-tools/default/field.storage.paragraph.field_free_spinning.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_free_spinning.yml
@@ -1,16 +1,14 @@
-uuid: 7e8c1b8f-9470-4a31-86bd-105b4ca6b219
+uuid: e4d50279-8f6e-4f76-bb55-1a0e137aa782
 langcode: en
 status: true
 dependencies:
   module:
-    - media
     - paragraphs
-id: paragraph.field_philips_acr_icon
-field_name: field_philips_acr_icon
+id: paragraph.field_free_spinning
+field_name: field_free_spinning
 entity_type: paragraph
-type: entity_reference
-settings:
-  target_type: media
+type: boolean
+settings: {  }
 module: core
 locked: false
 cardinality: 1
