--- a/config/apex-tools/default/core.entity_form_display.paragraph.philips.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.philips.default.yml
@@ -12,11 +12,10 @@ bundle: philips
 mode: default
 content:
   field_philips:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 3
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_point_size:
     type: options_select
