--- a/config/apex-tools/default/core.entity_form_display.paragraph.phillips_acr.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.phillips_acr.default.yml
@@ -3,24 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.phillips_acr.field_philips_acr_icon
     - field.field.paragraph.phillips_acr.field_philips_acr_point_size
     - field.field.paragraph.phillips_acr.field_phillips_acr_r_
+    - field.field.paragraph.phillips_acr.field_type_
     - paragraphs.paragraphs_type.phillips_acr
-  module:
-    - media_library
 id: paragraph.phillips_acr.default
 targetEntityType: paragraph
 bundle: phillips_acr
 mode: default
 content:
-  field_philips_acr_icon:
-    type: media_library_widget
-    weight: 1
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_philips_acr_point_size:
     type: options_select
     weight: 2
@@ -30,6 +21,12 @@ content:
   field_phillips_acr_r_:
     type: options_buttons
     weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_type_:
+    type: options_select
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
