--- a/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_requirements.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_requirements.default.yml
@@ -7,36 +7,40 @@ dependencies:
     - field.field.paragraph.screwdriver_cover_requirements.field_cover_requirements
     - paragraphs.paragraphs_type.screwdriver_cover_requirements
   module:
-    - paragraphs
+    - default_paragraphs
 id: paragraph.screwdriver_cover_requirements.default
 targetEntityType: paragraph
 bundle: screwdriver_cover_requirements
 mode: default
 content:
   field_components:
-    type: paragraphs
+    type: default_paragraphs
     weight: 1
     region: content
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
       closed_mode: summary
       autocollapse: none
-      closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
-      features:
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
+      default_paragraph_types:
+        components_to_be_covered_:
+          value: '1'
+          edit_mode: edit
+          weight: '-10'
+        screwdriver_cover_features:
+          value: '1'
+          edit_mode: edit
+          weight: '-9'
+      edit_mode: closed
     third_party_settings: {  }
   field_cover_requirements:
     type: boolean_checkbox
     weight: 0
     region: content
     settings:
-      display_label: false
+      display_label: true
     third_party_settings: {  }
 hidden:
   created: true
