--- a/config/apex-tools/default/core.entity_view_display.quotation.quotation.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.quotation.quotation.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.quotation.quotation.field_comments
     - field.field.quotation.quotation.field_country
     - field.field.quotation.quotation.field_custom_drive_tool_type
+    - field.field.quotation.quotation.field_custom_quotation_worksheet
     - field.field.quotation.quotation.field_describe_changes
     - field.field.quotation.quotation.field_enter_existing_apex_part
     - field.field.quotation.quotation.field_if_yes_please_enter_part
@@ -123,6 +124,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 24
+    region: content
+  field_custom_quotation_worksheet:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 48
     region: content
   field_describe_changes:
     type: basic_string
