--- a/config/apex-tools/default/field.field.quotation.quotation.field_custom_quotation_worksheet.yml
+++ b/config/apex-tools/default/field.field.quotation.quotation.field_custom_quotation_worksheet.yml
@@ -1,25 +1,20 @@
-uuid: a5ae3a14-6ba3-4682-92a2-695344686893
+uuid: 4d9acd50-fc18-4a23-8e14-30d472e6b05f
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.quotation.field_quotation_screwdriver_styl
-    - paragraphs.paragraphs_type.bit_dimensions
-    - paragraphs.paragraphs_type.bit_holder_retention_method
-    - paragraphs.paragraphs_type.quotation_order_type
-    - paragraphs.paragraphs_type.quotation_screwdriver_drive_type
-    - paragraphs.paragraphs_type.quotation_screwdriver_style
-    - paragraphs.paragraphs_type.screwdriver_bit_holder_styles
-    - paragraphs.paragraphs_type.screwdriver_cover_requirements
-    - paragraphs.paragraphs_type.socket_dimensions
+    - field.storage.quotation.field_custom_quotation_worksheet
+    - paragraphs.paragraphs_type.quotation_screwdriver
+    - paragraphs.paragraphs_type.socket_extension_adapter
+    - paragraphs.paragraphs_type.universal_swivel_wrench_para
   module:
     - apex_tools_custom_quotation
     - entity_reference_revisions
-id: quotation.quotation.field_quotation_screwdriver_styl
-field_name: field_quotation_screwdriver_styl
+id: quotation.quotation.field_custom_quotation_worksheet
+field_name: field_custom_quotation_worksheet
 entity_type: quotation
 bundle: quotation
-label: 'Request #1: Screwdriver Bit/ Bit Holder'
+label: 'Custom Quotation worksheet'
 description: ''
 required: false
 translatable: false
@@ -29,329 +24,327 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      bit_dimensions: bit_dimensions
-      bit_holder_retention_method: bit_holder_retention_method
-      quotation_screwdriver_style: quotation_screwdriver_style
-      quotation_order_type: quotation_order_type
-      quotation_screwdriver_drive_type: quotation_screwdriver_drive_type
-      socket_dimensions: socket_dimensions
-      screwdriver_bit_holder_styles: screwdriver_bit_holder_styles
-      screwdriver_cover_requirements: screwdriver_cover_requirements
+      quotation_screwdriver: quotation_screwdriver
+      socket_extension_adapter: socket_extension_adapter
+      universal_swivel_wrench_para: universal_swivel_wrench_para
     negate: 0
     target_bundles_drag_drop:
       360_hotspots:
-        weight: 47
-        enabled: false
-      360_product_image:
-        weight: 48
-        enabled: false
-      barbell:
-        weight: 62
-        enabled: false
-      basic_card:
-        weight: 49
-        enabled: false
-      basic_card_section:
-        weight: 50
-        enabled: false
-      bit_dimensions:
-        weight: 99
-        enabled: true
-      bit_holder_female_square:
-        weight: 104
-        enabled: false
-      bit_holder_male_hex_drive:
-        weight: 105
-        enabled: false
-      bit_holder_retention_method:
-        weight: 100
-        enabled: true
-      broach_opening:
-        weight: 85
-        enabled: false
-      callout_section_footer:
-        weight: 51
-        enabled: false
-      callout_section_page_end:
-        weight: 52
-        enabled: false
-      card:
-        weight: 53
-        enabled: false
-      components_to_be_covered_:
-        weight: 116
-        enabled: false
-      content_bundle:
-        weight: 54
-        enabled: false
-      content_section:
-        weight: 55
-        enabled: false
-      content_section_simple:
-        weight: 56
-        enabled: false
-      cover_features:
-        weight: 120
-        enabled: false
-      cta:
-        weight: 57
-        enabled: false
-      dimensions:
-        weight: 72
-        enabled: false
-      double_hex:
-        weight: 94
-        enabled: false
-      double_square:
-        weight: 95
-        enabled: false
-      drive_configuration_para:
-        weight: 112
-        enabled: false
-      drive_type_other:
-        weight: 113
-        enabled: false
-      enhanced_hero:
-        weight: 58
-        enabled: false
-      enhanced_product_features:
-        weight: 59
-        enabled: false
-      excerpt:
-        weight: 60
-        enabled: false
-      faq:
-        weight: 61
-        enabled: false
-      faqs_group:
-        weight: 62
-        enabled: false
-      faqs_section:
-        weight: 63
-        enabled: false
-      fast_lead:
-        weight: 102
-        enabled: false
-      featured_block:
-        weight: 64
-        enabled: false
-      featured_product_item:
-        weight: 66
-        enabled: false
-      featured_products:
-        weight: 65
-        enabled: false
-      featured_section:
-        weight: 67
-        enabled: false
-      female_square:
-        weight: 125
-        enabled: false
-      female_square_drive_short:
-        weight: 126
-        enabled: false
-      female_square_drive_standard_typ:
-        weight: 107
-        enabled: false
-      find_a_distributor:
-        weight: 68
-        enabled: false
-      form_section:
-        weight: 69
-        enabled: false
-      from_library:
-        weight: 70
-        enabled: false
-      grid_item:
-        weight: 71
-        enabled: false
-      grid_section:
-        weight: 72
-        enabled: false
-      hero:
-        weight: 73
-        enabled: false
-      hex:
-        weight: 114
-        enabled: false
-      hex_drive:
-        weight: 141
-        enabled: false
-      hex_insert:
-        weight: 135
-        enabled: false
-      hex_power:
-        weight: 136
-        enabled: false
-      iframe:
-        weight: 74
-        enabled: false
-      image_uploads:
-        weight: 152
-        enabled: false
-      intro:
-        weight: 75
-        enabled: false
-      magnetic:
-        weight: 139
-        enabled: false
-      mailing_list_form:
-        weight: 76
-        enabled: false
-      male_hex_drive_standard_type:
-        weight: 141
-        enabled: false
-      media_block:
-        weight: 77
-        enabled: false
-      media_file:
-        weight: 78
-        enabled: false
-      media_image:
-        weight: 79
-        enabled: false
-      media_kit:
-        weight: 80
-        enabled: false
-      message_block:
-        weight: 81
-        enabled: false
-      mortorq:
-        weight: 69
-        enabled: false
-      nutsetter:
-        weight: 97
-        enabled: false
-      nylon_covers_requirements:
-        weight: 166
-        enabled: false
-      optional_features:
-        weight: 98
-        enabled: false
-      other:
-        weight: 109
-        enabled: false
-      other_drive_consideration:
-        weight: 99
-        enabled: false
-      other_specifications:
-        weight: 128
-        enabled: false
-      philips:
-        weight: 82
-        enabled: false
-      phillips_acr:
-        weight: 83
-        enabled: false
-      pozidriv_r:
-        weight: 113
-        enabled: false
-      product_categories:
-        weight: 86
-        enabled: false
-      product_search:
-        weight: 87
-        enabled: false
-      products_category_section:
-        weight: 84
-        enabled: false
-      products_section:
-        weight: 85
-        enabled: false
-      quotation_order_type:
-        weight: 160
-        enabled: true
-      quotation_screwdriver_drive_type:
-        weight: 161
-        enabled: true
-      quotation_screwdriver_style:
-        weight: 136
-        enabled: true
-      s:
-        weight: 137
-        enabled: false
-      schedule_a_demo:
-        weight: 88
-        enabled: false
-      screwdriver_bit_holder_styles:
-        weight: 172
-        enabled: true
-      screwdriver_cover_features:
-        weight: 106
-        enabled: false
-      screwdriver_cover_requirements:
-        weight: 181
-        enabled: true
-      screwdriver_part_type:
-        weight: 187
-        enabled: false
-      shouldered:
-        weight: 107
-        enabled: false
-      slotted:
-        weight: 59
-        enabled: false
-      socket_dimensions:
-        weight: 167
-        enabled: true
-      socket_extension_adapter:
         weight: 108
         enabled: false
-      socket_head:
-        weight: 122
+      360_product_image:
+        weight: 109
         enabled: false
-      socket_type:
-        weight: 143
-        enabled: false
-      square:
-        weight: 144
-        enabled: false
-      square_recess:
-        weight: 124
-        enabled: false
-      straight:
+      barbell:
         weight: 110
         enabled: false
-      surface_drive:
-        weight: 147
-        enabled: false
-      tapered:
+      basic_card:
         weight: 111
         enabled: false
-      testimonials_block:
-        weight: 89
+      basic_card_section:
+        weight: 112
         enabled: false
-      testimonials_section:
-        weight: 90
+      bit_dimensions:
+        weight: 113
         enabled: false
-      threaded:
-        weight: 178
-        enabled: false
-      torq_set:
-        weight: 129
-        enabled: false
-      torx_align_r_:
-        weight: 130
-        enabled: false
-      torx_plus_r:
-        weight: 131
-        enabled: false
-      torx_r:
-        weight: 132
-        enabled: false
-      triple_square:
-        weight: 133
-        enabled: false
-      universal_swivel_wrench:
+      bit_holder_female_square:
         weight: 114
         enabled: false
-      universal_swivel_wrench_para:
+      bit_holder_male_hex_drive:
+        weight: 115
+        enabled: false
+      bit_holder_retention_method:
+        weight: 116
+        enabled: false
+      broach_opening:
+        weight: 117
+        enabled: false
+      callout_section_footer:
+        weight: 118
+        enabled: false
+      callout_section_page_end:
+        weight: 119
+        enabled: false
+      card:
+        weight: 120
+        enabled: false
+      components_to_be_covered_:
+        weight: 121
+        enabled: false
+      content_bundle:
+        weight: 122
+        enabled: false
+      content_section:
+        weight: 123
+        enabled: false
+      content_section_simple:
+        weight: 124
+        enabled: false
+      cover_features:
+        weight: 125
+        enabled: false
+      cta:
+        weight: 126
+        enabled: false
+      dimensions:
+        weight: 127
+        enabled: false
+      double_hex:
+        weight: 128
+        enabled: false
+      double_square:
+        weight: 129
+        enabled: false
+      drive_configuration_para:
+        weight: 130
+        enabled: false
+      drive_type_other:
+        weight: 131
+        enabled: false
+      enhanced_hero:
+        weight: 132
+        enabled: false
+      enhanced_product_features:
+        weight: 133
+        enabled: false
+      excerpt:
+        weight: 134
+        enabled: false
+      faq:
+        weight: 135
+        enabled: false
+      faqs_group:
+        weight: 136
+        enabled: false
+      faqs_section:
+        weight: 137
+        enabled: false
+      fast_lead:
+        weight: 138
+        enabled: false
+      featured_block:
+        weight: 139
+        enabled: false
+      featured_product_item:
+        weight: 140
+        enabled: false
+      featured_products:
+        weight: 141
+        enabled: false
+      featured_section:
+        weight: 142
+        enabled: false
+      female_square:
+        weight: 143
+        enabled: false
+      female_square_drive_short:
+        weight: 144
+        enabled: false
+      female_square_drive_standard_typ:
+        weight: 145
+        enabled: false
+      find_a_distributor:
+        weight: 146
+        enabled: false
+      form_section:
+        weight: 147
+        enabled: false
+      from_library:
+        weight: 148
+        enabled: false
+      grid_item:
+        weight: 149
+        enabled: false
+      grid_section:
+        weight: 150
+        enabled: false
+      hero:
+        weight: 151
+        enabled: false
+      hex:
+        weight: 152
+        enabled: false
+      hex_drive:
+        weight: 153
+        enabled: false
+      hex_insert:
+        weight: 154
+        enabled: false
+      hex_power:
+        weight: 155
+        enabled: false
+      iframe:
+        weight: 156
+        enabled: false
+      image_uploads:
+        weight: 157
+        enabled: false
+      intro:
+        weight: 158
+        enabled: false
+      magnetic:
+        weight: 159
+        enabled: false
+      mailing_list_form:
+        weight: 160
+        enabled: false
+      male_hex_drive_standard_type:
+        weight: 161
+        enabled: false
+      media_block:
+        weight: 162
+        enabled: false
+      media_file:
+        weight: 163
+        enabled: false
+      media_image:
+        weight: 164
+        enabled: false
+      media_kit:
+        weight: 165
+        enabled: false
+      message_block:
+        weight: 166
+        enabled: false
+      mortorq:
+        weight: 167
+        enabled: false
+      nutsetter:
+        weight: 168
+        enabled: false
+      nylon_covers_requirements:
+        weight: 169
+        enabled: false
+      optional_features:
+        weight: 170
+        enabled: false
+      other:
+        weight: 171
+        enabled: false
+      other_drive_consideration:
+        weight: 172
+        enabled: false
+      other_specifications:
+        weight: 173
+        enabled: false
+      philips:
+        weight: 174
+        enabled: false
+      phillips_acr:
+        weight: 175
+        enabled: false
+      pozidriv_r:
+        weight: 176
+        enabled: false
+      product_categories:
+        weight: 177
+        enabled: false
+      product_search:
+        weight: 178
+        enabled: false
+      products_category_section:
+        weight: 179
+        enabled: false
+      products_section:
+        weight: 180
+        enabled: false
+      quotation_order_type:
+        weight: 181
+        enabled: false
+      quotation_screwdriver:
+        weight: 107
+        enabled: true
+      quotation_screwdriver_drive_type:
+        weight: 182
+        enabled: false
+      quotation_screwdriver_style:
+        weight: 183
+        enabled: false
+      s:
+        weight: 184
+        enabled: false
+      schedule_a_demo:
+        weight: 185
+        enabled: false
+      screwdriver_bit_holder_styles:
+        weight: 186
+        enabled: false
+      screwdriver_cover_features:
+        weight: 187
+        enabled: false
+      screwdriver_cover_requirements:
+        weight: 188
+        enabled: false
+      screwdriver_part_type:
+        weight: 189
+        enabled: false
+      shouldered:
+        weight: 190
+        enabled: false
+      slotted:
+        weight: 191
+        enabled: false
+      socket_dimensions:
+        weight: 192
+        enabled: false
+      socket_extension_adapter:
+        weight: 193
+        enabled: true
+      socket_head:
+        weight: 194
+        enabled: false
+      socket_type:
+        weight: 195
+        enabled: false
+      square:
+        weight: 196
+        enabled: false
+      square_recess:
+        weight: 197
+        enabled: false
+      straight:
+        weight: 198
+        enabled: false
+      surface_drive:
+        weight: 199
+        enabled: false
+      tapered:
+        weight: 200
+        enabled: false
+      testimonials_block:
+        weight: 201
+        enabled: false
+      testimonials_section:
         weight: 202
         enabled: false
+      threaded:
+        weight: 203
+        enabled: false
+      torq_set:
+        weight: 204
+        enabled: false
+      torx_align_r_:
+        weight: 205
+        enabled: false
+      torx_plus_r:
+        weight: 206
+        enabled: false
+      torx_r:
+        weight: 207
+        enabled: false
+      triple_square:
+        weight: 208
+        enabled: false
+      universal_swivel_wrench:
+        weight: 209
+        enabled: false
+      universal_swivel_wrench_para:
+        weight: 210
+        enabled: true
       universal_wrench:
-        weight: 91
+        weight: 211
         enabled: false
       video_bundle:
-        weight: 92
+        weight: 212
         enabled: false
 field_type: entity_reference_revisions
