--- a/config/apex-tools/default/core.entity_view_display.paragraph.phillips_acr.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.phillips_acr.default.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.phillips_acr.field_philips_acr_icon
     - field.field.paragraph.phillips_acr.field_philips_acr_point_size
     - field.field.paragraph.phillips_acr.field_phillips_acr_r_
+    - field.field.paragraph.phillips_acr.field_type_
     - paragraphs.paragraphs_type.phillips_acr
   module:
     - options
@@ -14,15 +14,6 @@ targetEntityType: paragraph
 bundle: phillips_acr
 mode: default
 content:
-  field_philips_acr_icon:
-    type: entity_reference_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    weight: 1
-    region: content
   field_philips_acr_point_size:
     type: list_default
     label: above
@@ -39,6 +30,13 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_type_:
+    type: list_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 3
     region: content
 hidden:
   entity_print_view_epub: true
