--- a/config/clecotools/default/field.field.paragraph.product_solutions_item.field_solution_item_title.yml
+++ b/config/clecotools/default/field.field.paragraph.product_solutions_item.field_solution_item_title.yml
@@ -11,7 +11,7 @@ entity_type: paragraph
 bundle: product_solutions_item
 label: Title
 description: 'Title of the Product solutions item'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
