APEX-656: Added some more configurations

--- a/config/apex-tools/default/core.entity_form_display.paragraph.broach_opening.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.broach_opening.default.yml
@@ -74,36 +74,18 @@ content:
       placeholder: ''
     third_party_settings:
       conditional_fields:
-        d96a45ea-ddd8-4a36-9398-d26ef2a0a819:
+        8c102196-1176-4ecf-af80-34920fe7ff6d:
           entity_type: paragraph
           bundle: broach_opening
           dependee: field_broach_opening_allowed
           settings:
-            state: '!visible'
+            state: visible
             reset: false
             condition: value
             grouping: AND
-            values_set: 2
+            values_set: 4
             value: ''
-            values: torx®
-            value_form:
-              -
-                value: null
-            effect: show
-            effect_options: {  }
-            selector: ''
-        6ef4568a-c318-4af9-9327-ea4d81f0374f:
-          entity_type: paragraph
-          bundle: broach_opening
-          dependee: field_broach_opening_allowed
-          settings:
-            state: '!visible'
-            reset: false
-            condition: checked
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
+            values: "torx®\r\nbroach_other"
             value_form:
               -
                 value: null
