--- a/config/apex-tools/default/core.entity_form_display.paragraph.components_to_be_covered_.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.components_to_be_covered_.default.yml
@@ -11,7 +11,7 @@ bundle: components_to_be_covered_
 mode: default
 content:
   field_components_to_be_covered_:
-    type: options_select
+    type: options_buttons
     weight: 0
     region: content
     settings: {  }
