--- a/config/apex-tools/default/core.entity_view_display.paragraph.drive_configuration_para.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.drive_configuration_para.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.drive_configuration_para.field_hex_gender
     - field.field.paragraph.drive_configuration_para.field_hex_size
     - field.field.paragraph.drive_configuration_para.field_hex_type
+    - field.field.paragraph.drive_configuration_para.field_other_type
     - paragraphs.paragraphs_type.drive_configuration_para
   module:
     - options
@@ -43,6 +44,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_other_type:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 4
     region: content
 hidden:
   entity_print_view_epub: true
