APS-200: code updated for fromtend issue on solution block on industrial page.

--- a/config/clecotools/default/views.view.successful_automative_solutions.yml
+++ b/config/clecotools/default/views.view.successful_automative_solutions.yml
@@ -405,7 +405,7 @@ display:
           plugin_id: text
           empty: false
           content:
-            value: '<section class="section trusted-by-biggest-banner-title"><h2 class="section-title"><em>Sucessfull</em> Automative Solutions</h2></section>'
+            value: ''
             format: full_html
           tokenize: false
       footer: {  }
