APEX-459: Custom solution form step three styling.

--- a/config/apex-tools/default/core.entity_form_display.paragraph.female_square.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.female_square.default.yml
@@ -12,11 +12,10 @@ bundle: female_square
 mode: default
 content:
   field_female_square_1:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_female_square_size:
     type: options_select
