--- a/config/apex-tools/default/core.entity_form_display.paragraph.female_square_drive_short.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.female_square_drive_short.default.yml
@@ -13,11 +13,10 @@ bundle: female_square_drive_short
 mode: default
 content:
   field_feamale_square_drive:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_ib:
     type: options_select
