--- a/config/apex-tools/default/core.entity_form_display.paragraph.female_square_drive_standard_typ.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.female_square_drive_standard_typ.default.yml
@@ -13,11 +13,10 @@ bundle: female_square_drive_standard_typ
 mode: default
 content:
   field_female_square:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_iron_brand:
     type: options_select
