--- a/config/apex-tools/default/core.entity_form_display.paragraph.hex_drive.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.hex_drive.default.yml
@@ -14,11 +14,10 @@ bundle: hex_drive
 mode: default
 content:
   field_bit_holder_hex_drive:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_hex_drive_size:
     type: physical_measurement_default
