--- a/config/apex-tools/default/core.entity_form_display.paragraph.hex_insert.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.hex_insert.default.yml
@@ -12,11 +12,10 @@ bundle: hex_insert
 mode: default
 content:
   field_hex_insert:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_hex_insert_size:
     type: options_select
