--- a/config/apex-tools/default/core.entity_form_display.paragraph.male_hex_drive_standard_type.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.male_hex_drive_standard_type.default.yml
@@ -25,11 +25,10 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_male_hex_drive_standard_ty:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
