--- a/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
@@ -24,38 +24,46 @@ content:
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_types:
-        quotation_order_type:
-          value: '1'
-          edit_mode: edit
-          weight: '0'
-        quotation_screwdriver_drive_type:
-          value: '1'
-          edit_mode: edit
-          weight: '0'
-        quotation_screwdriver_style:
-          value: '1'
-          edit_mode: edit
-          weight: '0'
-        screwdriver_bit_holder_styles:
-          value: '1'
-          edit_mode: edit
-          weight: '0'
-        screwdriver_cover_features:
-          value: '1'
-          edit_mode: edit
-          weight: '0'
-        screwdriver_cover_requirements:
-          value: '1'
-          edit_mode: edit
-          weight: '0'
         screwdriver_part_type:
           value: '1'
           edit_mode: edit
-          weight: '0'
+          weight: '-10'
+        quotation_screwdriver_style:
+          value: '1'
+          edit_mode: edit
+          weight: '-9'
+        quotation_screwdriver_drive_type:
+          value: '1'
+          edit_mode: edit
+          weight: '-8'
+        bit_dimensions:
+          value: '1'
+          edit_mode: edit
+          weight: '-7'
+        bit_holder_retention_method:
+          value: '1'
+          edit_mode: edit
+          weight: '-6'
+        screwdriver_bit_holder_styles:
+          value: '1'
+          edit_mode: edit
+          weight: '-5'
+        screwdriver_cover_requirements:
+          value: '1'
+          edit_mode: edit
+          weight: '-4'
+        screwdriver_cover_features:
+          value: '1'
+          edit_mode: edit
+          weight: '-3'
         socket_dimensions:
           value: '1'
           edit_mode: edit
-          weight: '0'
+          weight: '-2'
+        quotation_order_type:
+          value: '1'
+          edit_mode: edit
+          weight: '-1'
       edit_mode: closed
     third_party_settings: {  }
 hidden:
