--- a/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_requirements.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_requirements.default.yml
@@ -36,11 +36,10 @@ content:
       edit_mode: closed
     third_party_settings: {  }
   field_cover_requirements:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 0
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
