--- a/config/apex-tools/default/field.field.paragraph.quotation_screwdriver.field_screwdriver.yml
+++ b/config/apex-tools/default/field.field.paragraph.quotation_screwdriver.field_screwdriver.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_screwdriver
+    - paragraphs.paragraphs_type.bit_dimensions
+    - paragraphs.paragraphs_type.bit_holder_retention_method
     - paragraphs.paragraphs_type.quotation_order_type
     - paragraphs.paragraphs_type.quotation_screwdriver
     - paragraphs.paragraphs_type.quotation_screwdriver_drive_type
@@ -29,6 +31,8 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
+      bit_dimensions: bit_dimensions
+      bit_holder_retention_method: bit_holder_retention_method
       quotation_order_type: quotation_order_type
       quotation_screwdriver_drive_type: quotation_screwdriver_drive_type
       quotation_screwdriver_style: quotation_screwdriver_style
@@ -56,7 +60,7 @@ settings:
         enabled: false
       bit_dimensions:
         weight: 113
-        enabled: false
+        enabled: true
       bit_holder_female_square:
         weight: 114
         enabled: false
@@ -65,7 +69,7 @@ settings:
         enabled: false
       bit_holder_retention_method:
         weight: 116
-        enabled: false
+        enabled: true
       broach_opening:
         weight: 117
         enabled: false
