--- a/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_features.default.yml
@@ -26,11 +26,10 @@ bundle: screwdriver_cover_features
 mode: default
 content:
   field_c_sink_dia_ang_ect:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 4
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_embedded_magnets:
     type: double_field
@@ -102,18 +101,16 @@ content:
       inline: false
     third_party_settings: {  }
   field_flush_with_tip_of_bit:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 5
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_free_spinning:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 10
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_material:
     type: double_field
@@ -239,11 +236,10 @@ content:
       inline: false
     third_party_settings: {  }
   field_screw_press_fit:
-    type: boolean_checkbox
+    type: options_buttons
     weight: 9
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_spring_force:
     type: double_field
