--- a/config/clecotools/default/field.field.node.case_studies.field_case_study_content.yml
+++ b/config/clecotools/default/field.field.node.case_studies.field_case_study_content.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: case_studies
 label: 'Case study Content'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
