--- a/config/clecotools/default/field.field.node.case_studies.field_case_study_summary.yml
+++ b/config/clecotools/default/field.field.node.case_studies.field_case_study_summary.yml
@@ -11,7 +11,7 @@ entity_type: node
 bundle: case_studies
 label: 'Case study Summary'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
