--- a/config/clecotools/default/field.field.node.case_studies.field_image.yml
+++ b/config/clecotools/default/field.field.node.case_studies.field_image.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: case_studies
 label: 'Case Study Banner'
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
