--- a/config/clecotools/default/field.field.node.case_studies.field_read_time.yml
+++ b/config/clecotools/default/field.field.node.case_studies.field_read_time.yml
@@ -10,8 +10,8 @@ field_name: field_read_time
 entity_type: node
 bundle: case_studies
 label: 'Read Time'
-description: ''
-required: false
+description: 'Please enter a value like:- 10 minute(s) to read.'
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
