--- a/config/clecotools/default/field.field.node.case_studies.field_type_of_case_study.yml
+++ b/config/clecotools/default/field.field.node.case_studies.field_type_of_case_study.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: case_studies
 label: 'Type of Case Study'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
