--- a/config/clecotools/default/field.field.node.case_studies.field_attachments.yml
+++ b/config/clecotools/default/field.field.node.case_studies.field_attachments.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: case_studies
 label: 'Case Study PDF attachment'
 description: 'Please use only pdf extension.'
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
