APS-196: Update case study component template.

--- a/config/clecotools/default/views.view.successful_automative_solutions.yml
+++ b/config/clecotools/default/views.view.successful_automative_solutions.yml
@@ -361,7 +361,7 @@ display:
           columns: 3
           automatic_width: false
           alignment: horizontal
-          row_class_custom: 'solution-case-study-row section main'
+          row_class_custom: solution-case-study-row
           row_class_default: true
           col_class_custom: solution-case-study-card
           col_class_default: true
@@ -394,20 +394,7 @@ display:
           admin_label: 'field_image: Media'
           plugin_id: standard
           required: false
-      header:
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: text
-          empty: false
-          content:
-            value: ''
-            format: full_html
-          tokenize: false
+      header: {  }
       footer: {  }
       display_extenders: {  }
     cache_metadata:
