--- a/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
@@ -60,6 +60,15 @@ content:
     third_party_settings: {  }
     weight: 10
     region: content
+  field_case_study:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 5
+    region: content
   field_featured_products:
     type: entity_reference_revisions_entity_view
     label: hidden
@@ -67,7 +76,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 5
+    weight: 6
     region: content
   field_find_a_distributor:
     type: entity_reference_revisions_entity_view
@@ -124,7 +133,6 @@ content:
     weight: 1
     region: content
 hidden:
-  field_case_study: true
   field_industry_solutions: true
   field_mailing_list_form: true
   langcode: true
