support/APS-205: Update the case study type

--- a/config/clecotools/default/core.entity_form_display.node.case_studies.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.case_studies.default.yml
@@ -152,4 +152,5 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_type_of_case_study: true
