--- a/config/clecotools/default/field.storage.node.field_type_of_case_study.yml
+++ b/config/clecotools/default/field.storage.node.field_type_of_case_study.yml
@@ -1,16 +1,15 @@
-uuid: d6f580d2-8325-4434-8a77-3d12284c3116
+uuid: 5898f0a7-64ce-4ffa-94dd-3f1a7e225b7a
 langcode: en
 status: true
 dependencies:
   module:
     - node
-    - taxonomy
 id: node.field_type_of_case_study
 field_name: field_type_of_case_study
 entity_type: node
 type: entity_reference
 settings:
-  target_type: taxonomy_term
+  target_type: node
 module: core
 locked: false
 cardinality: 1
