--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "dinbror/blazy": "^1.8",
@@ -54,13 +54,13 @@
         "drupal/better_exposed_filters": "^6.0",
         "drupal/bg_image_formatter": "^1.16",
         "drupal/blazy": "^2.2",
-        "drupal/block_class": "^1.1",
+        "drupal/block_class": "^2.0",
         "drupal/block_field": "^1.0@alpha",
-        "drupal/classy_paragraphs": "^1.0-rc1",
+        "drupal/classy_paragraphs": "^1.0@RC",
         "drupal/color_field": "^2.4",
         "drupal/conditional_fields": "^4.0@alpha",
         "drupal/config_export_ignore": "^1.1",
-        "drupal/config_ignore": "^2.0",
+        "drupal/config_ignore": "^3.0@beta",
         "drupal/config_split": "^1.0",
         "drupal/config_update": "1.7",
         "drupal/contact_storage": "^1.3",
@@ -73,7 +73,7 @@
         "drupal/core-vendor-hardening": "^9.4.7",
         "drupal/current_page_crumb": "^1.2",
         "drupal/default_paragraphs": "^2.0@RC",
-        "drupal/devel": "^4.1",
+        "drupal/devel": "^5.1",
         "drupal/devel_entity_updates": "^3.0",
         "drupal/devel_php": "^1.0",
         "drupal/diff": "^1.0@RC",
@@ -102,8 +102,8 @@
         "drupal/field_label": "^1.0",
         "drupal/field_states_ui": "^2.0",
         "drupal/file_mdm": "^2.5",
-        "drupal/fixed_block_content": "^1.1",
-        "drupal/focal_point": "^1.5",
+        "drupal/fixed_block_content": "^1.2",
+        "drupal/focal_point": "^2.0",
         "drupal/geocoder": "^3.31",
         "drupal/geofield": "^1.52",
         "drupal/geolocation": "^3.12",
@@ -119,13 +119,13 @@
         "drupal/jquery_ui_sortable": "^1.1",
         "drupal/jsonapi_extras": "^3.23",
         "drupal/layout_paragraphs": "^1.0@beta",
-        "drupal/limited_field_widgets": "^2.0",
+        "drupal/limited_field_widgets": "^2.1@alpha",
         "drupal/link_class": "^1.0",
         "drupal/linkit": "^5.0@beta",
-        "drupal/login_emailusername": "^1.1",
+        "drupal/login_emailusername": "^2.1",
         "drupal/markup": "^2.0@beta",
         "drupal/media_entity_browser": "^2.0@alpha",
-        "drupal/media_responsive_thumbnail": "^1.0",
+        "drupal/media_responsive_thumbnail": "^1.5",
         "drupal/media_video_micromodal": "^1.0.8",
         "drupal/memcache": "^2.0@alpha",
         "drupal/menu_link_attributes": "^1.0",
@@ -170,17 +170,17 @@
         "drupal/swiftmailer": "2.x-dev",
         "drupal/tamper": "^1.0@alpha",
         "drupal/taxonomy_access_fix": "^4.0@beta",
-        "drupal/telephone_formatter": "^1.0@beta",
-        "drupal/telephone_validation": "^2.1",
+        "drupal/telephone_formatter": "^1.2",
+        "drupal/telephone_validation": "^2.4",
         "drupal/theme_filter": "^1.0",
         "drupal/token": "^1.11",
         "drupal/triples_field": "^1.0",
         "drupal/twig_tweak": "^3.2",
         "drupal/ultimate_cron": "^2.0@alpha",
-        "drupal/upgrade_status": "^3.18",
+        "drupal/upgrade_status": "^4.0",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_data_export": "^1.2",
-        "drupal/views_taxonomy_term_name_into_id": "^1.0@alpha",
+        "drupal/views_taxonomy_term_name_into_id": "^1.0@RC",
         "drupal/views_tree": "^2.0@RC",
         "drupal/viewsreference": "^2.0@alpha",
         "drupal/viewsreference_filter": "^1.0.3",
@@ -212,7 +212,7 @@
         "discard-changes": true,
         "sort-packages": true,
         "platform": {
-            "php": "8.0"
+            "php": "8.1"
         },
         "allow-plugins": {
             "composer/installers": true,
