APS-147: Theme, twig files, JS and CSS,Config file

--- a/docroot/themes/custom/cleco/cleco.libraries.yml
+++ b/docroot/themes/custom/cleco/cleco.libraries.yml
@@ -16,3 +16,12 @@ drupal:
     dist/js/drupal.js: {}
   dependencies:
     - core/drupal
+
+hubspot:
+  header: true
+  js:
+    //js.hsforms.net/forms/embed/v2.js: {}
+  dependencies:
+    - core/jquery
+    - core/jquery.once
+    - core/drupal
