--- a/config/clecotools/default/core.entity_form_display.node.contact.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.contact.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.node.contact.field_forms
     - field.field.node.contact.field_hero
+    - field.field.node.contact.field_hubspot_node
     - field.field.node.contact.field_locations_content_type
     - field.field.node.contact.field_mailing_list_form
     - field.field.node.contact.field_seo
     - node.type.contact
+    - workflows.workflow.editorial
   module:
     - content_moderation
     - metatag
@@ -21,21 +23,9 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
-    third_party_settings: {  }
-  field_forms:
-    type: entity_reference_paragraphs
-    weight: 5
-    region: content
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
     third_party_settings: {  }
   field_hero:
     type: entity_reference_paragraphs
@@ -49,15 +39,25 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+  field_hubspot_node:
+    type: entity_reference_autocomplete
+    weight: 26
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_locations_content_type:
     type: options_select
-    weight: 26
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   field_mailing_list_form:
     type: entity_reference_paragraphs
-    weight: 101
+    weight: 11
     region: content
     settings:
       title: 'Mailing List Form'
@@ -69,9 +69,11 @@ content:
     third_party_settings: {  }
   field_seo:
     type: metatag_firehose
-    weight: 27
+    weight: 8
     region: content
-    settings: {  }
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
@@ -82,7 +84,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -109,7 +111,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -118,10 +120,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_forms: true
   promote: true
   sticky: true
