--- a/config/clecotools/default/core.entity_view_display.node.contact.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.contact.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.contact.field_forms
     - field.field.node.contact.field_hero
+    - field.field.node.contact.field_hubspot_node
     - field.field.node.contact.field_locations_content_type
     - field.field.node.contact.field_mailing_list_form
     - field.field.node.contact.field_seo
@@ -23,15 +24,6 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_forms:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 2
-    region: content
   field_hero:
     type: entity_reference_revisions_entity_view
     label: hidden
@@ -41,22 +33,19 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
-  field_locations_content_type:
-    type: entity_reference_entity_id
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 3
-    region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 4
+    weight: 2
     region: content
 hidden:
+  field_forms: true
+  field_hubspot_node: true
+  field_locations_content_type: true
   field_mailing_list_form: true
   langcode: true
   links: true
   search_api_excerpt: true
+  uuid: true
