support/APS-205: Updated the case study listing view

--- a/config/clecotools/default/views.view.case_study_listing.yml
+++ b/config/clecotools/default/views.view.case_study_listing.yml
@@ -66,13 +66,13 @@ display:
             preserve_tags: ''
             html: false
           element_type: ''
-          element_class: ''
+          element_class: solution-card-image
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -108,21 +108,39 @@ display:
           exclude: false
           alter:
             alter_text: false
+            text: ''
             make_link: false
+            path: ''
             absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
             word_boundary: false
             ellipsis: false
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
             strip_tags: false
             trim: false
+            preserve_tags: ''
             html: false
           element_type: ''
-          element_class: ''
+          element_class: solution-card-title
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -179,13 +197,13 @@ display:
             preserve_tags: ''
             html: false
           element_type: ''
-          element_class: ''
+          element_class: solution-card-text
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -293,9 +311,9 @@ display:
           columns: 3
           automatic_width: true
           alignment: horizontal
-          row_class_custom: ''
+          row_class_custom: 'solution-case-study-row section main'
           row_class_default: true
-          col_class_custom: ''
+          col_class_custom: solution-case-study-card
           col_class_default: true
       row:
         type: fields
@@ -322,6 +340,7 @@ display:
           admin_label: 'field_image: Media'
           plugin_id: standard
           required: false
+      css_class: solutions-cards-wrapper
       header: {  }
       footer: {  }
       display_extenders: {  }
